--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,6 @@
         <meta name="description" content="WebStudio">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <title>WebStudio</title>
-        <link rel="stylesheet" href="./css/portfolio.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -16,36 +12,33 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/reset.css"/>
+        <link rel="stylesheet" href="./css/portfolio.css"/>
     </head>
     <body>
         <!-- HEADER -->
         <header class="header">
             <div class="container">
-                <a class="header__logo" href="index.html">
-                    WebStudio
+                <div class="header__content__wrap">
+                <a class="header__logo" href="/">
+                    Web<span>Studio</span>
                 </a>
-            <nav class="header__nav">
-                <ul class="header__nav__menu">
-                    <li><a class="header__nav__menu__item" href="./index.html">Студія</a></li>
-                    <li><a class="header__nav__menu__item" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="header__nav__menu__item" href="./contacts.html">Контакти</a></li>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__list__item"><a class="nav__list__link" href="index.html">Студія</a></li>
+                    <li class="nav__list__item"><a class="nav__list__link" href="portfolio.html">Портфоліо</a></li>
+                    <li class="nav__list__item"><a class="nav__list__link" href="contacts.html">Контакти</a></li>
                 </ul>    
             </nav>
-                <ul class="header__contacts">
-                    <li>
-                            <a href="mailto:info@devstudio.com" class="header__mail header__contacts__item">
-                                <h3>info@devstudio.com</h3>
-                            </a>
-                    </li>
-                    <li>
-                            <a href="tel:+380961111111" class="header__tel header__contacts__item">
-                                <h3>+38 096 111 11 11</h3>
-                            </a>                        
-                    </li>
-                </ul>
-            </div>
-                     
-            <div class="header__line"></div>
+                <ul class="contacts__list">
+                    <li class="contacts__list__item"><a class="contacts__list__link" href="mailto:info@devstudio.com" class="header__mail header__contacts__item">info@devstudio.com</a></li>
+                    <li class="contacts__list__item"><a class="contacts__list__link" href="tel:+380961111111" class="header__tel header__contacts__item">+38 096 111 11 11</a></li>
+                </ul>    
+                </div>
+            </div>  
         </header>
         <main>
             <section class="portfolio">
@@ -58,50 +51,68 @@
                         <li><button class="portfolio__sort__button">Маркетинг</button></li>
                     </ul>  
                     <ul class="portfolio__list">
-                        <li>
-                            <img src="./img/portfolio1.png" alt="Технокряк" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Технокряк</h3>
-                            <p class="portfolio__list__item__description">Веб-сайт</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio1.png" alt="Технокряк" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Технокряк</h3>
+                                <p class="portfolio__list__description">Веб-сайт</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./img/portfolio2.png" alt="Постер New Orlean vs Golden Star" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Постер New Orlean vs Golden Star</h3>
-                            <p class="portfolio__list__item__description">Дизайн</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio2.png" alt="Постер New Orlean vs Golden Star" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Постер New Orlean vs Golden Star</h3>
+                                <p class="portfolio__list__description">Дизайн</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./img/portfolio3.png" alt="Ресторан Seafood" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Ресторан Seafood</h3>
-                            <p class="portfolio__list__item__description">Додаток</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio3.png" alt="Ресторан Seafood" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Ресторан Seafood</h3>
+                                <p class="portfolio__list__description">Додаток</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./img/portfolio4.png" alt="Проєкт Prime" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Проєкт Prime</h3>
-                            <p class="portfolio__list__item__description">Маркетинг</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio4.png" alt="Проєкт Prime" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Проєкт Prime</h3>
+                                <p class="portfolio__list__description">Маркетинг</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./img/portfolio5.png" alt="Проєкт Boxes" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Проєкт Boxes</h3>
-                            <p class="portfolio__list__item__description">Додаток</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio5.png" alt="Проєкт Boxes" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Проєкт Boxes</h3>
+                                <p class="portfolio__list__description">Додаток</p>
+                            </div>                        
                         </li>
-                        <li>
-                            <img src="./img/portfolio6.png" alt="Inspiration has no Borders" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Inspiration has no Borders</h3>
-                            <p class="portfolio__list__item__description">Веб-сайт</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio6.png" alt="Inspiration has no Borders" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Inspiration has no Borders</h3>
+                                <p class="portfolio__list__description">Веб-сайт</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./img/portfolio7.png" alt="Видання Limited Edition" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Видання Limited Edition</h3>
-                            <p class="portfolio__list__item__description">Дизайн</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio7.png" alt="Видання Limited Edition" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Видання Limited Edition</h3>
+                                <p class="portfolio__list__description">Дизайн</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./img/portfolio8.png" alt="Проєкт LAB" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Проєкт LAB</h3>
-                            <p class="portfolio__list__item__description">Маркетинг</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio8.png" alt="Проєкт LAB" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Проєкт LAB</h3>
+                                <p class="portfolio__list__description">Маркетинг</p>
+                            </div>
                         </li>
-                        <li>
-                            <img src="./img/portfolio9.png" alt="Growing Business" class="portfolio__list__item__img">
-                            <h3 class="portfolio__list__item__title">Growing Business</h3>
-                            <p class="portfolio__list__item__description">Додаток</p>
+                        <li class="portfolio__list__item">
+                            <img src="./img/portfolio9.png" alt="Growing Business" class="portfolio__list__img">
+                            <div class="portofolio__list__container">
+                                <h3 class="portfolio__list__title">Growing Business</h3>
+                                <p class="portfolio__list__description">Додаток</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -111,12 +122,16 @@
         <!-- FOOTER -->
         <footer class="footer">
             <div class="container">
-                <a href="" class="footer__logo">WebStudio</a>
-                <ul class="footer__contacts">
-                    <li><address class="footer__address"><a href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></address></li>
-                    <li><a class="footer__mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="footer__tel" href="tel:+380961111111">+380961111111</a></li>
-                </ul>
+                <a href="" class="footer__logo">
+                    Web<span>Studio</span>
+                </a>
+                <address class="address">
+                    <ul class="address__list">
+                        <li class="address__list__item"><a class="address__list__link address__list__address" href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="address__list__item"><a class="address__list__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="address__list__item"><a class="address__list__link" href="tel:+380961111111">+380961111111</a></li>
+                    </ul>
+                </address>
             </div>
         </footer>
     </body>
