--- a/portfolio.html
+++ b/portfolio.html
@@ -119,19 +119,57 @@
                 
             </section>
         </main>
-        <!-- FOOTER -->
-        <footer class="footer">
+       <!-- FOOTER -->
+       <footer class="footer">
             <div class="container">
-                <a href="" class="footer__logo">
-                    Web<span>Studio</span>
-                </a>
-                <address class="address">
-                    <ul class="address__list">
-                        <li class="address__list__item"><a class="address__list__link address__list__address" href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></li>
-                        <li class="address__list__item"><a class="address__list__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="address__list__item"><a class="address__list__link" href="tel:+380961111111">+380961111111</a></li>
-                    </ul>
-                </address>
+                <div class="footer__wrap">
+                    <div class="footer__information">
+                        <a href="" class="footer__logo">
+                            Web<span>Studio</span>
+                        </a>
+                        <address class="address">
+                            <ul class="address__list">
+                                <li class="address__list__item"><a class="address__list__link address__list__address" href="https://goo.gl/maps/rP3KJcBMN24kTdJs8">м. Київ, пр-т Лесі Українки, 26</a></li>
+                                <li class="address__list__item"><a class="address__list__link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                                <li class="address__list__item"><a class="address__list__link" href="tel:+380961111111">+380961111111</a></li>
+                            </ul>
+                        </address>
+                    </div>
+                    
+                    <div class="footer__join">
+                        <h3 class="footer__join__title">Приєднуйтесь</h3>
+                        <ul class="footer__social__medias">
+                            <li class="footer__social__media">
+                                <a href="" class="footer__social__media__link">
+                                    <svg width="20" height="20">
+                                        <use class="footer__social__media__icon" href="./svg/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer__social__media">
+                                <a href="" class="footer__social__media__link">
+                                    <svg width="20" height="20">
+                                        <use class="footer__social__media__icon" href="./svg/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer__social__media">
+                                <a href="" class="footer__social__media__link">
+                                    <svg width="20" height="20">
+                                        <use class="footer__social__media__icon" href="./svg/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="footer__social__media">
+                                <a href="" class="footer__social__media__link">
+                                    <svg width="20" height="20">
+                                        <use class="footer__social__media__icon" href="./svg/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
